decuple the bot to AF

--- a/ChatStockApp/appsettings.json
+++ b/ChatStockApp/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IndentityDbContextConnection": "Data Source=ChatStockApp.db"
-  }
+  },
+  "AzureFunctionsUrl": "dfmeramyfirstazurefunction.azurewebsites.net/api/ChatStockBot?code=BXfKFeyLHIackk6fMmLkTkevaqjtW4piUDaWQWcx1RPKuJ7sxB2SwQ=="
 }
