--- a/ChatStockApp/appsettings.json
+++ b/ChatStockApp/appsettings.json
@@ -8,7 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IndentityDbContextConnection": "Data Source=ChatStockApp.db"
-  },
-  "AzureFunctionsUrl": "dfmeramyfirstazurefunction.azurewebsites.net/api/ChatStockBot?code=BXfKFeyLHIackk6fMmLkTkevaqjtW4piUDaWQWcx1RPKuJ7sxB2SwQ=="
+    "IndentityDbContextConnection": "Server=tcp:dfmerasqldev.database.windows.net,1433;Initial Catalog=Vehiculos;Persist Security Info=False;User ID=dfmera;Password=D-f90982122.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
