--- a/ChatStockApp/appsettings.json
+++ b/ChatStockApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IndentityDbContextConnection": "Server=tcp:dfmerasqldev.database.windows.net,1433;Initial Catalog=Vehiculos;Persist Security Info=False;User ID=dfmera;Password=D-f90982122.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "IndentityDbContextConnection": "Data Source=ChatStockApp.db"
   }
 }
