--- a/ChatStockApp/appsettings.Development.json
+++ b/ChatStockApp/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AzureFunctionsUrl": "https://dfmerachatstockbotfunction.azurewebsites.net/api/ChatStockBot?code=s9oiByL/y0bv1TH7CMRZnbgYs8cWvTAVHbLL2y/3halCFNJG15CLjg==",
+  "ConnectionStrings": {
+    "IndentityDbContextConnection": "Data Source=ChatStockApp.db"
   }
 }
